wwwroot/css/index.css
/* ... */
#primary {
    margin-top: 0;
}

    #primary .heading-icon {
        margin: 0 auto;
    }

    #primary .heading-icon, #secondary .heading-icon {
        display: block;
        width: 66px;
        height: 66px;
        margin-bottom: 30px;
    }


@media (min-width:670px) {
    #primary {
        margin-top: -120px;
    }
}

#about-us .section-title {
    text-align: center;
}

#about-us .general-link--arrow {
    margin-bottom: 280px;
}

@media (min-width:670px) {
    #about-us .section-title {
        margin: 0 25%;
    }

    #about-us .common-paragraph {
        width: 100%;
        text-align: left;
    }

    #about-us .general-link--arrow {
        margin-bottom: 80px;
    }
}

@media (min-width:880px) {
    #about-us {
        position: relative;
        bottom: 30px;
        display: -ms-flexbox;
        display: flex;
        -ms-flex-direction: column;
        flex-direction: column;
        -ms-flex-pack: center;
        justify-content: center;
        height: 580px;
    }

        #about-us > * {
            -ms-flex: none;
            flex: none;
        }

        #about-us .section-title {
            display: -ms-flexbox;
            display: flex;
            -ms-flex-align: center;
            align-items: center;
            width: 50%;
            margin: 0 0 0 33px;
            padding-right: 33px;
            text-align: right;
        }

        #about-us .heading-icon {
            -ms-flex: none;
            flex: none;
            -ms-flex-order: 1;
            order: 1;
            margin: 0 0 0 25px;
        }

        #about-us .section-title span {
            -ms-flex: 1;
            flex: 1;
        }

        #about-us .general-link--arrow {
            margin-bottom: 0;
        }

    #about-us .common-paragraph {
        width: 50%;
        text-align: right;
    }
}

#about-us .common-paragraph {
    padding-top: 35px;
}

#about-us .general-link {
    display: block;
}

@media (min-width:670px) {
    #about-us .general-link {
        margin-top: 35px;
        border-top: 2px solid #f1f7fb;
    }
}

#meetups {
    position: relative;
    padding-top: 110px;
}

    #meetups:before {
        content: "";
        position: absolute;
        z-index: -1;
        width: 100%;
        height: 180%;
        top: 0;
        transform: skewY(-12deg);
        background: #f6f9fc;
    }

    #meetups .section-title {
        text-align: center;
        position: relative;
    }

@media (min-width:670px) {
    #notebook {
        position: relative;
        padding-bottom: 70px;
    }

    #editor {
        margin: 0 245px 0 0;
    }
}

#always-improving, #global-scale {
    padding: 20px 0;
    border: 1px solid #f6f9fc;
}

#always-improving {
    border-width: 0 0 1px;
}

#global-scale {
    border-width: 1px 0 0;
}

@media (min-width:670px) {
    #secondary .cols {
        display: -ms-flexbox;
        display: flex;
    }

    #always-improving {
        -ms-flex: 1;
        flex: 1;
        padding-right: 20px;
        border-width: 0 1px 0 0;
    }

    #global-scale {
        -ms-flex: 1;
        flex: 1;
        padding-left: 20px;
        border-width: 0 0 0 1px;
    }
}

@media (min-width:1040px) {
    #always-improving {
        padding: 70px 70px 70px 0;
    }

    #global-scale {
        padding: 70px 0 70px 70px;
    }
}

#secondary {
    margin-top: 40px;
}

#secondary .heading-icon {
    margin-bottom: 25px;
}

#secondary .common-paragraph {
    margin: 15px 0 18px;
}

#sponsors{
    margin: 60px 0;
}

.sponsor-logos{
    text-align: center;
}

.sponsor-logo{
    height: 90px;
    margin-right: 60px;
}

.sponsor-logo-last{
    height: 90px;
}

.event-map{
    height: 400px; 
    width: 100%; 
    margin-top: 10px;
}

